gcc/testsuite/gdc.test/compilable/issue21328.d

static foreach(i; 1 .. 5)
void foo(float[i] arr)
{
    () {
        float x = arr[0];
    } ();
}
