gcc/testsuite/gdc.test/fail_compilation/ice9013.d
void main()
{
    foreach (i; 0 .. missing)
        int[] foo = cast(int[])[i];
}
